# brickarchitect-label-converter

./: .gitignore  AGENTS.md  Avery5167ReturnAddressLabels.docx  README.md  lbx_to_avery_5167.py  pip_requirements.txt  pyproject.toml  refresh_v40_baseline.py  run.sh
LEGO_BRICK_LABELS-v40/: ABOUT.txt  VERSION_40.txt
LEGO_BRICK_LABELS-v40/Colors/: colors-current-common.lbx  colors-current-rare.lbx  colors-current-uncommon_1.lbx  colors-current-uncommon_2.lbx
LEGO_BRICK_LABELS-v40/Groups/: Groups_1.lbx  Groups_2.lbx  Retired_Groups_1.lbx  Retired_Groups_3.lbx
LEGO_BRICK_LABELS-v40/New_in_v40/: New_in_v40-labels_1.lbx  New_in_v40-labels_10.lbx  New_in_v40-labels_11.lbx  New_in_v40-labels_12.lbx  New_in_v40-labels_13.lbx  New_in_v40-labels_14.lbx  New_in_v40-labels_15.lbx  New_in_v40-labels_2.lbx  New_in_v40-labels_3.lbx  New_in_v40-labels_4.lbx  New_in_v40-labels_5.lbx  New_in_v40-labels_6.lbx  New_in_v40-labels_7.lbx  New_in_v40-labels_8.lbx  New_in_v40-labels_9.lbx  Updated_in_v40-labels_1.lbx  Updated_in_v40-labels_2.lbx
brickarchitect_label_converter/: __init__.py  cli.py  config.py  lbx_lib.py  render.py  segment.py
docs/: CHANGELOG.md  CODE_ARCHITECTURE.md  FILE_FORMATS.md  FILE_STRUCTURE.md  INSTALL.md  LABEL_BOUNDARIES.md  NEWS.md  PLAN.md  REFACTOR_PLAN.md  RELATED_PROJECTS.md  RELEASE_HISTORY.md  ROADMAP.md  TODO.md  TROUBLESHOOTING.md  USAGE.md
tests/: conftest.py  test_imposition_geometry.py  test_label_counts_v40.py  test_label_geometry_invariants.py  test_lbx_integrity.py  test_lbx_to_avery_5167.py  test_render_smoke_page.py
(+280 files in other folders)
